# nyumaya_audio_recognition_lib

./: .travis.yml  AudioRecognitionImpl.cpp  AudioRecognitionImpl.h  CMakeLists.txt  ModelLoader.cpp  README.md  SpeakerVerificationImpl.cpp  SpeakerVerificationImpl.h  feature_extract.cpp  feature_extract.h  lib.cpp  lib.h  libjni.h  make_all.sh  register.cc  tensorflow_sources  test.cpp  tflite.patch
boards/: raspberry_pi_zero.cmake
